# threat-aware-swarm

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  Makefile  README.md  constraints.txt  docker-compose.yaml  experiments.csv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
baselines/: README.md  __init__.py  astar_grid.py  astar_support.py  controllers.py  factory.py  flow_field.py  mpc_lite.py  mpc_support.py  params.py  planner_fallbacks.py  policies.py  potential_fields.py  separation_steering.py  utils.py
common/: README.md  __init__.py  context.py  contracts.py  oracle_visibility.py  physics_model.py
common/physics/: __init__.py  model.py  walls.py  walls_numba.py
common/policy/: __init__.py  context.py  obs_schema.py  oracle_visibility.py  specs.py  waypoint_controller.py
common/runtime/: __init__.py  contracts.py  env_factory.py  env_overrides.py  episode_runner.py  hydra_utils.py  path_utils.py  xai.py
configs/: README.md  metrics_schema.yaml
configs/benchmark/: benchmark_matrix.yaml  leakage_checklist.yaml  method_taxonomy.yaml
configs/curriculum/: base.yaml  phase01.yaml  phase23.yaml  phase45.yaml
docs/: README.md  benchmark_policy.md  showcase.md
env/: README.md  __init__.py  config.py  core.py  decision_loop.py  engine.py  event_handlers.py  events.py  pz_env.py  rng_registry.py  state.py  visualizer.py  wrappers.py
eval/: benchmark.py
notebooks/: experiments.ipynb
scenarios/: S0_sanity_no_threats.yaml  S10_risk_vs_efficiency.yaml  S11_dynamic_gate.yaml  S12_cross_traffic.yaml  S13_dense_forest_static.yaml  S14_moving_goal.yaml  S15_interceptor_threat.yaml  S16_dynamic_breathing.yaml  S17_shared_memory_gap.yaml  S18_hard_maze.yaml  S1_single_threat_blocking.yaml  S2_corridor_two_threats.yaml  S3_high_intensity_near_goal.yaml  S4_goal_between_threats.yaml  S5_dynamic_linear.yaml  S6_dynamic_brownian.yaml  S7_dynamic_chaser.yaml  S8_u_trap_escape.yaml  S9_bottleneck_passage.yaml
scripts/: README.md  __init__.py  eval_models.py  index_models.py  trained_ppo.py
tests/: README.md  conftest.py  test_curriculum_integration.py  test_env_smoke.py  test_imports.py  test_train_smoke.py
ui/: __init__.py  config.py  controller.py  dispatcher.py  overlay.py  policies.py  policy_workers.py  renderer.py  scene_spec.py  scenes.py  telemetry.py  telemetry_dto.py  telemetry_schema.py  tunables.py  web_server.py  ws_models.py
ui_frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
viz/: run_demo.py  run_trained_pz.py
(+279 files in other folders)
